# ccd-validation

./: .gitignore  .pdm-python  Makefile  README.md  justfile  main.py  pyproject.toml  seaborn_example.ipynb  test.trees  yule-10_1.xml
lightning_logs/version_10/: metrics.csv
lightning_logs/version_4/: metrics.csv
lightning_logs/version_5/: metrics.csv
ml_data/output/: config.yaml
scripts/: copy_paper_data.py  download_biological_datasets.py  setup_hpc.sh
src/analysis/: mre.ipynb
src/datasets/: create_datasets.sh  create_yule_10_dataset.sh  create_yule_10_fixed_dataset.sh  create_yule_datasets.sh  load_phylodata.py  load_trees.py  run_yule_beast_runs.sh  subsample_datasets.ipynb  yule-10.lphy  yule-100.lphy  yule-200.lphy  yule-400.lphy  yule-50.lphy  yule.lphy  yule_10.lphy  yule_10_fixed.lphy
src/distribution_analysis/: analyze_bccd2_model.ipynb  analyze_bccd_distribution.ipynb  analyze_branch_lengths.ipynb  analyze_tree_correlations.ipynb  analyze_tree_heights.ipynb  clade.py  curse_of_dimensionality.py  process_tree.py  redo.ipynb  systematic_distribution_analysis.ipynb  test.ipynb
src/distribution_validation/: data_likelihood_validation.py  density_validation.py  dirichlet_tests.ipynb  goodness_of_fit.ipynb  goodness_of_fit_validation.py  height.ipynb  hpd_analysis.ipynb  likelihood.ipynb  marginals_validation.py  model_benchmark.py  nf_true_density_analsis.ipynb  num_parameters_analysis.py  posterior_error.ipynb  posterior_ratio_validation.py  process_phylodata_trees.sh  process_trees.sh  rank_uniformity_test.ipynb  tests.ipynb  true_tree_density_validation.py  validate_models.py  validation.ipynb
src/experiments/: beta_tests.ipynb  cherry_cubes.ipynb  cholseky_tests.ipynb  corpula_tests.ipynb  curse.ipynb  dependent_gamma_test.ipynb  dependent_sampling.ipynb  dirichlet_tests.ipynb  gamma_tests.ipynb  inetgral_tests.ipynb  likelihood.ipynb  logitnormal_tests.ipynb  mle.ipynb  multivariate_normal_test.ipynb  posterior_hpd.ipynb  test.tex  true.csv  (+5 more)
(+64 files in other folders)
