[project]
name = "ccd-validation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tobia Ochsner", email = "tobia.ochsner@inf.ethz.ch"},
]
dependencies = [
    "biopython>=1.84",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "jupyterlab>=4.2.5",
    "python-nexus>=2.9.0",
    "tqdm>=4.66.5",
    "seaborn>=0.13.2",
    "scipy>=1.14.1",
    "matplotlib-venn>=1.1.1",
    "plotly>=5.24.1",
    "kaleido!=0.2.1.post1",
    "statsmodels>=0.14.4",
    "NetworkX>=3.4.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
