[project]
name = "ccd-validation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tobia Ochsner", email = "tobia.ochsner@inf.ethz.ch"},
]
dependencies = [
    "biopython>=1.84",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "jupyterlab>=4.2.5",
    "python-nexus>=2.9.0",
    "tqdm>=4.66.5",
    "seaborn>=0.13.2",
    "scipy>=1.14.1",
    "matplotlib-venn>=1.1.1",
    "plotly>=5.24.1",
    "kaleido!=0.2.1.post1",
    "statsmodels>=0.14.4",
    "NetworkX>=3.4.2",
    "torch>=2.5.1",
    "lightning>=2.4.0",
    "scikit-learn>=1.6.0",
    "loguru>=0.7.3",
    "comet-ml>=3.47.4",
    "mlflow>=2.19.0",
    "optuna>=4.1.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
