[project]
name = "ccd-validation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "jupyterlab>=4.5.0",
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
authors = [
    {name = "Tobia Ochsner", email = "tobia.ochsner@inf.ethz.ch"},
]
